[package]
name = "mkwimg"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/kaliiiiiiiiii/rinb"
repository = "https://github.com/kaliiiiiiiiii/rinb"
readme = "README.md"


[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
fatfs = "0.3.6"
fscommon = "0.1.1"
gpt = "4.1.0"
indicatif = "0.18.0"
mbrman = "0.6.1"
rdisk = {path = "third_party/rdisk", default-features = false, features = ["user"]}

# ntfs = "0.4.0"
# uuid = { version = "1.18.1", features = ["v4"] }
