[package]
name = "rinb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
schemars = "1.0.4"
serde = {version ="1.0.219", features = ["derive"]}
serde_json5 = "0.2.1"

[build-dependencies]
schemars = "1.0.4"
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
