[package]
name = "rinb"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
documentation = "https://github.com/kaliiiiiiiiii/rinb"
repository = "https://github.com/kaliiiiiiiiii/rinb"
readme = "README.md"
build = "build.rs"


[dependencies]
anyhow = "1.0.99"
cab = "0.6.0"
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
reqwest = {version="0.12.23", features = ["blocking"]}
roxmltree = "0.20.0"
schemars = "1.0.4"
serde = {version ="1.0.219", features = ["derive"]}
serde_json5 = "0.2.1"
sha1 = "0.10.6"
tempfile = "3.21.0"
wimlib = {path="../toolsnt/toolsnt-mirror/wimlib", features = ["mount", "bundled"], default-features = false}
# pacman -S base-devel mingw-w64-x86_64-toolchain
# pacman -S diffutils

[build-dependencies]
anyhow = "1.0.99"
schemars = "1.0.4"
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
