[package]
name = "rinb"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
documentation = "https://github.com/kaliiiiiiiiii/rinb"
repository = "https://github.com/kaliiiiiiiiii/rinb"
readme = "README.md"
build = "build.rs"


[dependencies]
anyhow = "1.0.99"
cab = "0.6.0"
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12.23", features = ["blocking"] }
roxmltree = "0.20.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json5 = "0.2.1"
sha1 = "0.10.6"
tempfile = "3.21.0"
uuid = { version = "1.18.0", features = ["v4"] }
widestring = "1.2.0"
wimlib = { path = "../toolsnt/wimlib", features = [
    "mount",
    "bundled",
], default-features = false }

hadris-iso = { path = "../hadris/crates/hadris-iso" }
# winapi = {version="0.3.9",features = ["winbase", "winnt", "memoryapi"] }

[build-dependencies]
anyhow = "1.0.99"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
tempfile = "3.21.0"
serde_json = "1.0.143"
roxmltree = "0.20.0"
sha1 = "0.10.6"
hex = "0.4.3"
cab = "0.6.0"
